# ap

./: .gitignore  CMakeLists.txt  conf.txt  main.cpp
include/: AutoPlay.hpp  config.hpp  spy.hpp
